SFDCProject/src/objects/Quote__c.object
<CustomObject>
    <description>This is a form of the proposal object specifically meant for Lead objects.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <description>The estimated azimuth of the home as indicated by the quote.</description>
        <label>Azimuth</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Date__c</fullName>
        <description>The date and time at which the user &quot;deleted&quot; their quote in the Lead Portal.  This normally happens only to expired quotes.  A quote that is deleted is still in our records but invisible to the user.  An empty value for this field means that the quote has not been deleted.</description>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The quoted person&apos;s email address.</description>
        <inlineHelpText>The quoted person&apos;s first name.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <description>The date after which a quote is expired, when to be valid it must be &quot;refreshed&quot; by the user in the Lead Portal.  Nominally 30 days after creation.</description>
        <label>Expire Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>The quoted person&apos;s first name.</description>
        <inlineHelpText>The quoted person&apos;s first name.</inlineHelpText>
        <label>First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicated_Latitude__c</fullName>
        <label>Indicated Latitude</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicated_Longitude__c</fullName>
        <description>The indicated longitude of the home being quoted.</description>
        <label>Indicated Longitude</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>The quoted person&apos;s last name.</description>
        <inlineHelpText>The quoted person&apos;s last name.</inlineHelpText>
        <label>Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lead that issued this quote.</description>
        <inlineHelpText>The lead that issued this quote.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mode_Name__c</fullName>
        <description>The name of the mode which issued this quote.</description>
        <inlineHelpText>The name of the mode which issued this quote.</inlineHelpText>
        <label>Mode Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Utility_Bill__c</fullName>
        <description>The utility bill after solar.</description>
        <inlineHelpText>The utility bill after solar.</inlineHelpText>
        <label>New Utility Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Utility_Bill__c</fullName>
        <description>The utility bill the customer has before installing solar.</description>
        <inlineHelpText>The utility bill the customer has before installing solar.</inlineHelpText>
        <label>Old Utility Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Own_Home__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Own Home?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>The zip or postal code of the given home.</description>
        <label>Postal Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Unique_ID__c</fullName>
        <description>The unique identifier of the contract evaluation that issued this proposal.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique identifier of the contract evaluation that issued this proposal.</inlineHelpText>
        <label>Evaluation Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Refreshed_Date__c</fullName>
        <description>Date/time at which the quote was refreshed by the user.  Only possible for quotes that have expired.  No value indicates the field has never been refreshed.</description>
        <label>Refreshed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shading__c</fullName>
        <description>The shading derate, as estimated by the quote.</description>
        <label>Shading</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_Bill__c</fullName>
        <description>The expected periodic bill for going with SunRun.</description>
        <inlineHelpText>The expected periodic bill for going with SunRun.</inlineHelpText>
        <label>Solar Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Two letter code for the state. Three letters just in case...</description>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>The street address of the home being quoted.</description>
        <inlineHelpText>The street address of the home being quoted.</inlineHelpText>
        <label>Street</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tilt__c</fullName>
        <description>The tilt of the panels, as estimated by the user of the quote tool.</description>
        <inlineHelpText>The tilt of the panels, as estimated by the user of the quote tool.</inlineHelpText>
        <label>Tilt</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upfront_Payment__c</fullName>
        <description>The upfront payment</description>
        <inlineHelpText>The upfront payment</inlineHelpText>
        <label>Upfront Payment</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific Gas &amp; Electric (PG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California Edison (SCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego Gas &amp; Electric (SDG&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LADWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasadena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNITIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSTAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WMECO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X25_Year_Savings__c</fullName>
        <label>25 Year Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kWh_Apr__c</fullName>
        <label>kWh – Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Aug__c</fullName>
        <label>kWh – Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Dec__c</fullName>
        <label>kWh – Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Feb__c</fullName>
        <label>kWh – Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Jan__c</fullName>
        <label>kWh – Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Jul__c</fullName>
        <label>kWh – Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Jun__c</fullName>
        <label>kWh – Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Mar__c</fullName>
        <label>kWh – Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_May__c</fullName>
        <label>kWh – May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Nov__c</fullName>
        <label>kWh – Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Oct__c</fullName>
        <label>kWh – Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kWh_Sep__c</fullName>
        <label>kWh – Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>